App theme updated

--- a/app/src/main/res/layout/activity_counters.xml
+++ b/app/src/main/res/layout/activity_counters.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".counters.CounterListActivity">
 
     <ImageView
@@ -37,6 +38,8 @@
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/Text.Primary.Medium.Largest"
+        tools:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/increment"
         app:layout_constraintStart_toEndOf="@+id/reduction"
